#2 完成数据支持类CCMutableArray、CCArray以及使用到的数据模块 1.创建CCMutableArray类，该类为模板类，只有头文件

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -182,6 +182,10 @@
 			Name="include"
 			>
 			<File
+				RelativePath=".\include\CCMutableArray.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCObject.h"
 				>
 			</File>
