#1 完成CCObject类，完成内存管理模块，完成对象的拷贝复制模块 创建内存池类CCAutoreleasePool，该类提供了添加删除和清空CCObject对象的基本操作

--- a/cocos2dx/cocos2dx.vcxproj
+++ b/cocos2dx/cocos2dx.vcxproj
@@ -75,11 +75,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\CCAutoreleasePool.h" />
     <ClInclude Include="include\CCMutableArray.h" />
     <ClInclude Include="include\CCObject.h" />
     <ClInclude Include="include\CCZone.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cocoa\CCAutoreleasePool.cpp" />
     <ClCompile Include="cocoa\CCObject.cpp" />
     <ClCompile Include="cocoa\CCZone.cpp" />
   </ItemGroup>
