--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -170,6 +170,10 @@
 			Name="cocoa"
 			>
 			<File
+				RelativePath=".\cocoa\CCAutoreleasePool.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cocoa\CCObject.cpp"
 				>
 			</File>
@@ -181,6 +185,10 @@
 		<Filter
 			Name="include"
 			>
+			<File
+				RelativePath=".\include\CCAutoreleasePool.h"
+				>
+			</File>
 			<File
 				RelativePath=".\include\CCMutableArray.h"
 				>
