#3 把各文件经常使用到的代码块提取出作为一个新的宏定义文件ccMacros.h 1. CCAssert代替assert，并多一个提示信息参数。

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -190,6 +190,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\ccMacros.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCMutableArray.h"
 				>
 			</File>
