#4 完善CCApplication应用程序类和CCEGLView窗口创建管理类，并使用这两个类新建一个测试工程来显示窗口 1.创建CCApplication类

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -186,6 +186,10 @@
 			Name="include"
 			>
 			<File
+				RelativePath=".\include\CCApplication.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCAutoreleasePool.h"
 				>
 			</File>
@@ -203,6 +207,14 @@
 			</File>
 			<File
 				RelativePath=".\include\CCZone.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="win32"
+			>
+			<File
+				RelativePath=".\win32\CCApplication.cpp"
 				>
 			</File>
 		</Filter>
