#4 完善CCApplication应用程序类和CCEGLView窗口创建管理类，并使用这两个类新建一个测试工程来显示窗口 2.创建CCEGLView类

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCEGLView.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\ccMacros.h"
 				>
 			</File>
@@ -215,6 +219,10 @@
 			>
 			<File
 				RelativePath=".\win32\CCApplication.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\win32\CCEGLView.cpp"
 				>
 			</File>
 		</Filter>
