#4 完善CCApplication应用程序类和CCEGLView窗口创建管理类，并使用这两个类新建一个测试工程来显示窗口 3.创建测试工程，依赖项为cocos2dx,类型为Win32应用程序

--- a/tests/tests.vcproj
+++ b/tests/tests.vcproj
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\cocos2dx\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -165,6 +166,22 @@
 	<References>
 	</References>
 	<Files>
+		<File
+			RelativePath=".\AppDelegate.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\AppDelegate.h"
+			>
+		</File>
+		<File
+			RelativePath=".\main.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\main.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
