#6 使用OPENGL ES 来绘制窗口 2.设置opengles的引用工程配置；并初始化opengl es，使其绑定在主窗体hwnd和hdc，便于接下来的绘制显示操作

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\include"
+				AdditionalIncludeDirectories=".\include;.\third_party\OGLES"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;COCOS2DX_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -58,10 +58,13 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
+				CommandLine="if not exist &quot;$(OutDir)&quot; mkdir &quot;$(OutDir)&quot;&#x0D;&#x0A;xcopy /Y /Q &quot;$(ProjectDir)\third_party\libraries\*.*&quot; &quot;$(OutDir)&quot;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="libEGL.lib libgles_cm.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
