#6 使用OPENGL ES 来绘制窗口 3.显示效果，原来的窗口默认白色背景，在opengl es 中设置刷新背景为黑色，并且在消息循环中刷新

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
-				CommandLine="if not exist &quot;$(OutDir)&quot; mkdir &quot;$(OutDir)&quot;&#x0D;&#x0A;xcopy /Y /Q &quot;$(ProjectDir)\third_party\libraries\*.*&quot; &quot;$(OutDir)&quot;"
+				CommandLine="if not exist &quot;$(OutDir)&quot; mkdir &quot;$(OutDir)&quot;&#x0D;&#x0A;xcopy /Y /Q &quot;$(ProjectDir)\third_party\libraries\*.*&quot; &quot;$(OutDir)&quot;&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
@@ -218,6 +218,10 @@
 			</File>
 			<File
 				RelativePath=".\include\CCZone.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\cocos2d.h"
 				>
 			</File>
 		</Filter>
