#8 创建CCGeometry类，定义cocos2d工程中的节点用到的位置(point结构体),尺寸(size结构体),矩形范围(rect结构体),并提供这几个结构体的有关计算操作接口

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cocoa\CCGeometry.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cocoa\CCObject.cpp"
 				>
 			</File>
@@ -205,6 +209,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCGeometry.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\ccMacros.h"
 				>
 			</File>
@@ -214,6 +222,10 @@
 			</File>
 			<File
 				RelativePath=".\include\CCObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\CCPointExtension.h"
 				>
 			</File>
 			<File
@@ -234,6 +246,14 @@
 			</File>
 			<File
 				RelativePath=".\win32\CCEGLView.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="support"
+			>
+			<File
+				RelativePath=".\support\CCPointExtension.cpp"
 				>
 			</File>
 		</Filter>
