#7 创建所有节点父类CCNode，并创建场景类CCSence CCNode和CCSence的基本框架

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -221,11 +221,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCObject.h"
 				>
 			</File>
 			<File
 				RelativePath=".\include\CCPointExtension.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\CCScene.h"
 				>
 			</File>
 			<File
@@ -254,6 +262,22 @@
 			>
 			<File
 				RelativePath=".\support\CCPointExtension.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="base_nodes"
+			>
+			<File
+				RelativePath=".\base_nodes\CCNode.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="layers_scenes_transitions_nodes"
+			>
+			<File
+				RelativePath=".\layers_scenes_transitions_nodes\CCScene.cpp"
 				>
 			</File>
 		</Filter>
