#9 修复内存泄漏,添加第三方内存泄漏检测工具Visual Leak Detector cocos2dx工程中添加vld模块，配置工程

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\include;.\third_party\OGLES"
+				AdditionalIncludeDirectories=".\include;.\third_party\OGLES;.\third_party\vld"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;COCOS2DX_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
