#10 创建节点层类CCLayer,CCLayer通过CCTouchDispatcher分发来响应触摸消息(win32下鼠标消息) 创建CCTouchDispatcher类来分发触摸消息

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -237,6 +237,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCTouch.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\CCTouchDispatcher.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCZone.h"
 				>
 			</File>
@@ -278,6 +286,14 @@
 			>
 			<File
 				RelativePath=".\layers_scenes_transitions_nodes\CCScene.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="touch_dispatcher"
+			>
+			<File
+				RelativePath=".\touch_dispatcher\CCTouchDispatcher.cpp"
 				>
 			</File>
 		</Filter>
