#10 创建节点层类CCLayer 创建响应节点接口代理类CCTouchDelegate，所有待响应touch消息的node均需继承自此类，为了存储响应touch节点信息（如响应优先级，是否捕获，是否吞下不再投递），创建了touch消息存储结构体(类)CCTouchHandle

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -241,7 +241,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCTouchDelegateProtocol.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCTouchDispatcher.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\CCTouchHandler.h"
 				>
 			</File>
 			<File
@@ -294,6 +302,10 @@
 			>
 			<File
 				RelativePath=".\touch_dispatcher\CCTouchDispatcher.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\touch_dispatcher\CCTouchHandler.cpp"
 				>
 			</File>
 		</Filter>
