#10 创建节点层类CCLayer 创建CCLayer节点，该节点继承CCTouchDelegate，并注册到CCTouchDispatcher分发类中，能够响应触摸消息

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -213,6 +213,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCLayer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\ccMacros.h"
 				>
 			</File>
@@ -292,6 +296,10 @@
 		<Filter
 			Name="layers_scenes_transitions_nodes"
 			>
+			<File
+				RelativePath=".\layers_scenes_transitions_nodes\CCLayer.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\layers_scenes_transitions_nodes\CCScene.cpp"
 				>
