#11 创建精灵类CCSprite,可以读取png文件，并可用opengles显示出来  3、创建纹理处理类CCTexture2D

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -253,6 +253,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCTexture2D.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCTouch.h"
 				>
 			</File>
@@ -334,6 +338,14 @@
 			</File>
 			<File
 				RelativePath=".\touch_dispatcher\CCTouchHandler.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="textures"
+			>
+			<File
+				RelativePath=".\textures\CCTexture2D.cpp"
 				>
 			</File>
 		</Filter>
