#11 创建精灵类CCSprite,可以读取png文件，并可用opengles显示出来  4、创建CCSprite精灵类,根据纹理索引显示贴图纹理

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -249,6 +249,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCSprite.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCString.h"
 				>
 			</File>
@@ -346,6 +350,14 @@
 			>
 			<File
 				RelativePath=".\textures\CCTexture2D.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="sprite_nodes"
+			>
+			<File
+				RelativePath=".\sprite_nodes\CCSprite.cpp"
 				>
 			</File>
 		</Filter>
