--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -173,6 +173,10 @@
 			Name="cocoa"
 			>
 			<File
+				RelativePath=".\cocoa\CCAffineTransform.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cocoa\CCAutoreleasePool.cpp"
 				>
 			</File>
@@ -192,6 +196,10 @@
 		<Filter
 			Name="include"
 			>
+			<File
+				RelativePath=".\include\CCAffineTransform.h"
+				>
+			</File>
 			<File
 				RelativePath=".\include\CCApplication.h"
 				>
@@ -284,6 +292,10 @@
 				RelativePath=".\include\cocos2d.h"
 				>
 			</File>
+			<File
+				RelativePath=".\include\TransformUtils.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="win32"
@@ -310,6 +322,10 @@
 			>
 			<File
 				RelativePath=".\support\CCPointExtension.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\support\TransformUtils.cpp"
 				>
 			</File>
 		</Filter>
