#13 完善CCSprite功能 精灵使用的坐标颜色相关的结构体定义在ccTypes.h中

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\ccTypes.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCZone.h"
 				>
 			</File>
