VS2010解决方案及项目配置

--- a/cocos2dx/cocos2dx.vcxproj
+++ b/cocos2dx/cocos2dx.vcxproj
@@ -47,15 +47,22 @@
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;COCOS2DX_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\include</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;COCOS2DX_EXPORTS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>.\include;.\third_party\OGLES;.\third_party\vld;.\third_party\libpng;.\third_party\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4251;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libEGL.lib;libgles_cm.lib;libzlib.lib;libpng.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreLinkEvent>
+      <Command>if not exist "$(OutDir)" mkdir "$(OutDir)"
+xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
+    </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -75,15 +82,53 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\CCAffineTransform.h" />
+    <ClInclude Include="include\CCApplication.h" />
     <ClInclude Include="include\CCAutoreleasePool.h" />
+    <ClInclude Include="include\CCDirector.h" />
+    <ClInclude Include="include\CCEGLView.h" />
+    <ClInclude Include="include\CCFileUtils.h" />
+    <ClInclude Include="include\CCGeometry.h" />
+    <ClInclude Include="include\CCImage.h" />
+    <ClInclude Include="include\CCLayer.h" />
+    <ClInclude Include="include\ccMacros.h" />
     <ClInclude Include="include\CCMutableArray.h" />
+    <ClInclude Include="include\CCNode.h" />
     <ClInclude Include="include\CCObject.h" />
+    <ClInclude Include="include\CCPointExtension.h" />
+    <ClInclude Include="include\CCScene.h" />
+    <ClInclude Include="include\CCSprite.h" />
+    <ClInclude Include="include\CCString.h" />
+    <ClInclude Include="include\CCTexture2D.h" />
+    <ClInclude Include="include\CCTouch.h" />
+    <ClInclude Include="include\CCTouchDelegateProtocol.h" />
+    <ClInclude Include="include\CCTouchDispatcher.h" />
+    <ClInclude Include="include\CCTouchHandler.h" />
+    <ClInclude Include="include\ccTypes.h" />
     <ClInclude Include="include\CCZone.h" />
+    <ClInclude Include="include\cocos2d.h" />
+    <ClInclude Include="include\TransformUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="base_nodes\CCNode.cpp" />
+    <ClCompile Include="CCDirector.cpp" />
+    <ClCompile Include="cocoa\CCAffineTransform.cpp" />
     <ClCompile Include="cocoa\CCAutoreleasePool.cpp" />
+    <ClCompile Include="cocoa\CCGeometry.cpp" />
     <ClCompile Include="cocoa\CCObject.cpp" />
     <ClCompile Include="cocoa\CCZone.cpp" />
+    <ClCompile Include="layers_scenes_transitions_nodes\CCLayer.cpp" />
+    <ClCompile Include="layers_scenes_transitions_nodes\CCScene.cpp" />
+    <ClCompile Include="sprite_nodes\CCSprite.cpp" />
+    <ClCompile Include="support\CCPointExtension.cpp" />
+    <ClCompile Include="support\TransformUtils.cpp" />
+    <ClCompile Include="textures\CCTexture2D.cpp" />
+    <ClCompile Include="touch_dispatcher\CCTouchDispatcher.cpp" />
+    <ClCompile Include="touch_dispatcher\CCTouchHandler.cpp" />
+    <ClCompile Include="win32\CCApplication.cpp" />
+    <ClCompile Include="win32\CCEGLView.cpp" />
+    <ClCompile Include="win32\CCFileUtils.cpp" />
+    <ClCompile Include="win32\CCImage.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
