VS2008测试工程配置bugfix： 1.要显式添加链接器输入库文件cocos2dx.lib，不应依靠"项目依赖性"来完成该步骤，因为vs2010即便设置了项目依赖项，不显式指定链接库的话仍然链接出错。 2.不使用的libEGL.lib应去除

--- a/tests/tests.vcproj
+++ b/tests/tests.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libEGL.lib libgles_cm.lib"
+				AdditionalDependencies="cocos2dx.lib libgles_cm.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
 				GenerateDebugInformation="true"
