消除链接警告4098：默认库与其他库使用冲突，冲突的原因是cocos2dx使用的是/MDd即msvcrtd.lib，而其使用的第三方库使用/MT即libcmt.lib，从而导致同一个程序使用不同类型的运行时库。解决办法是默认使用当前项目的运行时库，其他运行时库忽略掉

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -65,6 +65,7 @@
 				AdditionalDependencies="libEGL.lib libgles_cm.lib libzlib.lib libpng.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
+				IgnoreDefaultLibraryNames="libc.lib;libcmt.lib;msvcrt.lib;libcd.lib;libcmtd.lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
