--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -242,6 +242,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCMutableDictionary.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCNode.h"
 				>
 			</File>
@@ -267,6 +271,10 @@
 			</File>
 			<File
 				RelativePath=".\include\CCTexture2D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\CCTextureCache.h"
 				>
 			</File>
 			<File
@@ -371,6 +379,10 @@
 			>
 			<File
 				RelativePath=".\textures\CCTexture2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\textures\CCTextureCache.cpp"
 				>
 			</File>
 		</Filter>
