#13 完善CCSprite功能 整理CCTexture2D,使用Power Of Two尺寸纹理，去除目前用不到的纹理格式处理

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCConfiguration.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCDirector.h"
 				>
 			</File>
@@ -394,6 +398,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\CCConfiguration.cpp"
+			>
+		</File>
 		<File
 			RelativePath=".\CCDirector.cpp"
 			>
