#12 创建CCLabelTTF类 创建一个框架，提供基本的接口如setString initWithString.具体实现要在CCTexture2D和CCImage实现

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -234,6 +234,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\CCLabelTTF.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\CCLayer.h"
 				>
 			</File>
@@ -395,6 +399,14 @@
 			>
 			<File
 				RelativePath=".\sprite_nodes\CCSprite.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="label_nodes"
+			>
+			<File
+				RelativePath=".\label_nodes\CCLabelTTF.cpp"
 				>
 			</File>
 		</Filter>
