--- a/cocos2dx/cocos2dx.vcxproj
+++ b/cocos2dx/cocos2dx.vcxproj
@@ -86,11 +86,13 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
     <ClInclude Include="include\CCAffineTransform.h" />
     <ClInclude Include="include\CCApplication.h" />
     <ClInclude Include="include\CCAutoreleasePool.h" />
+    <ClInclude Include="include\CCConfiguration.h" />
     <ClInclude Include="include\CCDirector.h" />
     <ClInclude Include="include\CCEGLView.h" />
     <ClInclude Include="include\CCFileUtils.h" />
     <ClInclude Include="include\CCGeometry.h" />
     <ClInclude Include="include\CCImage.h" />
+    <ClInclude Include="include\CCLabelTTF.h" />
     <ClInclude Include="include\CCLayer.h" />
     <ClInclude Include="include\ccMacros.h" />
     <ClInclude Include="include\CCMutableArray.h" />
@@ -114,12 +116,14 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base_nodes\CCNode.cpp" />
+    <ClCompile Include="CCConfiguration.cpp" />
     <ClCompile Include="CCDirector.cpp" />
     <ClCompile Include="cocoa\CCAffineTransform.cpp" />
     <ClCompile Include="cocoa\CCAutoreleasePool.cpp" />
     <ClCompile Include="cocoa\CCGeometry.cpp" />
     <ClCompile Include="cocoa\CCObject.cpp" />
     <ClCompile Include="cocoa\CCZone.cpp" />
+    <ClCompile Include="label_nodes\CCLabelTTF.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCLayer.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCScene.cpp" />
     <ClCompile Include="sprite_nodes\CCSprite.cpp" />
