--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -434,6 +434,10 @@
 			Name="platform"
 			>
 			<File
+				RelativePath=".\platform\CCGL.h"
+				>
+			</File>
+			<File
 				RelativePath=".\platform\CCStdC.h"
 				>
 			</File>
