#18 跨平台处理 添加平台宏，暂时先定义WIN32和LINUX

--- a/cocos2dx/cocos2dx.vcproj
+++ b/cocos2dx/cocos2dx.vcproj
@@ -434,6 +434,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\platform\CCPlatformConfig.h"
+				>
+			</File>
+			<File
 				RelativePath=".\platform\CCStdC.h"
 				>
 			</File>
