#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 修改tests工程目录结构，平台相关的代码各自独立文件夹中

--- a/tests/tests.vcproj
+++ b/tests/tests.vcproj
@@ -168,14 +168,18 @@
 	<References>
 	</References>
 	<Files>
-		<File
-			RelativePath=".\main.cpp"
+		<Filter
+			Name="win32"
 			>
-		</File>
-		<File
-			RelativePath=".\main.h"
-			>
-		</File>
+			<File
+				RelativePath=".\win32\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\win32\main.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
