#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 创建tests空白窗口

--- a/tests/tests.vcproj
+++ b/tests/tests.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\cocos2dx\include;..\cocos2dx\third_party\OGLES;..\cocos2dx\third_party\GLFW;..\cocos2dx\platform;..\cocos2dx\platform\win32"
+				AdditionalIncludeDirectories="..\cocos2dx\include;..\cocos2dx\third_party\OGLES;..\cocos2dx\third_party\GLFW;..\cocos2dx\platform;..\cocos2dx\platform\win32;.\tests"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -177,6 +177,18 @@
 			</File>
 			<File
 				RelativePath=".\win32\main.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="tests"
+			>
+			<File
+				RelativePath=".\tests\AppDelegate.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\tests\AppDelegate.h"
 				>
 			</File>
 		</Filter>
