#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 起始场景

--- a/tests/tests.vcproj
+++ b/tests/tests.vcproj
@@ -191,6 +191,14 @@
 				RelativePath=".\tests\AppDelegate.h"
 				>
 			</File>
+			<File
+				RelativePath=".\tests\TestControllerScene.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\tests\TestControllerScene.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
